# kedro-deltalake-demo

./: .gitignore  README.md  demo.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt
conf/base/: catalog.yml
conf/dev/: globals.yml
data/: eps_bronze_03-march.csv  eps_bronze_04-april.csv
src/kedro_deltalake_demo/: __init__.py
src/kedro_deltalake_demo/datasets/: polars_delta_dataset.py
