[project]
name = "kedro-deltalake-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro>=0.19.8",
    "polars[deltalake]>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.kedro]
project_name = "kedro-deltalake-demo"
package_name = "kedro_deltalake_demo"
kedro_init_version = "0.19.8"

[tool.uv]
dev-dependencies = [
    "ipython>=8.26.0",
    "ipykernel>=6.29.5",
]
